--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Montserrat", sans-serif;
+  margin: 0 10%;
+}
+
+h4 {
+  font-size: 1rem;
+  /* color: rgb(56, 56, 56); */
+}
+
+p {
+  font-size: 1.2rem;
+  /* color: rgb(56, 56, 56); */
+  line-height: 1.5;
+  margin: 2rem 0rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  /* color: rgb(56, 56, 56); */
+  line-height: 1.5;
+  margin: 2rem 0rem;
+}
+
+a {
+  color: rgb(56, 56, 56);
 }
