--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ h4 {
 p {
   font-size: 1.2rem;
   /* color: rgb(56, 56, 56); */
-  line-height: 1.5;
-  margin: 2rem 0rem;
+  line-height: 2;
+  margin: 1rem 1rem;
 }
 
 h3 {
@@ -37,4 +37,16 @@ h3 {
 
 a {
   color: rgb(56, 56, 56);
+}
+
+ol {
+  list-style: circle;
+  margin: 5px 0px 10px 25px;
+  line-height: 45px;
+}
+
+#myName {
+  background: linear-gradient(to right, #03d3fc, #04187d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
