--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,15 @@ ol {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@media screen and (max-width: 1000px) {
+  body {
+    margin: 0% 2%;
+  }
+}
+/* 
+@media screen and (max-width: 490px) {
+  body {
+    margin: 0% 2%;
+  }
+} */
